--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     }
 
     .version {
-      color: red;
+      color: blue;
       font-size: 0.8rem;
       position: absolute;
       top: 10px;
@@ -236,7 +236,7 @@
 </head>
 <body>
   <main class="container">
-    <h1>Welcome to the NASHBOT</h1>
+    <h1>Welcome to Fairy automated bot</h1>
     <span class="version">version 2.2</span>
     <a href="#" class="guide-button" id="toggleGuide">Show Guide</a>
     
