--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
       text-decoration: none;
       border-radius: 5px;
       transition: background-color 0.3s ease, transform 0.3s ease, color 0.3s ease;
-      display: block;
+      display: pink;
       margin: 10px auto;
     }
 
@@ -236,7 +236,7 @@
 </head>
 <body>
   <main class="container">
-    <h1>Welcome to Fairy automated bot</h1>
+    <h1>🧚‍♂️Welcome to Fairy automated bot</h1>
     <span class="version">version 2.2</span>
     <a href="#" class="guide-button" id="toggleGuide">Show Guide</a>
     
